# binaryTree

./: README.md  configure.ac
src/: Makefile.am  main.c  mytree.c  mytree.h  tree.c  tree.h
src/include/: Makefile.am
src/lib/: Makefile.am
src/main/: Makefile.am  main.c
